# hello_client

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build_ninja.bat  conanfile.py  vs_check.bat
cmake/: ClangTools.cmake  CommonConfig.cmake  VersionConfig.cmake
common/net_discovery/: CMakeLists.txt  net_discovery.cpp  net_discovery.hpp
common/telemetry/: CMakeLists.txt  grpc_metrics.cpp  telemetry.cpp  telemetry.hpp  telemetry_internal.cpp  telemetry_internal.hpp  trace_pipeline.cpp  trace_span.cpp
conanfile/: win_x64_release  win_x86_release  x64-release_ninja
include/: common.hpp  hello_client.hpp
include/hello_client/: client_service.hpp  common.hpp
include/services/: client_service.hpp  update_service.hpp
services/client/: CMakeLists.txt
services/client/src/: client_service.cpp  hello_client.cpp
src/client/: CMakeLists.txt
src/client/src/: hello_client.cpp
src/client/src/control/: client_impl.cpp  update_impl.cpp
src/messages/: CMakeLists.txt  client_messages.cpp  client_messages.hpp
src/proto/: CMakeLists.txt  server_messages.proto  server_service.proto  update_service.proto
src/telemetry/: telemetry.cpp  telemetry.hpp
test/: CMakeLists.txt
test/client/: client_test.cpp
test/src/: main_test.cpp
tools/: generate_windows_test_bat.py
